2003-04-03	Eri Valette <eric.valette@free.fr>

	PR 381/core
	* src/newlibc.c: Switch from using _REENT_INIT to _REEINT_INIT_PTR
	to fix strange run-time problem where EIP was corrupted on pc386 BSP.

2003-03-18	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: AC_CHECK_FUNCS(strlcpy strlcat).
	* src/strlcat.c: New (extracted from pppd/utils.c).
	* src/strlcpy.c: New (extracted from pppd/utils.c).
	* Makefile.am: Add BSD_C_FILES, strlcat.c, strlcpy.c.

2003-03-06	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Remove AC_CONFIG_AUX_DIR.

2003-02-20	Wolfram Wadepohl <W.Wadepohl@indumat.de>

	PR 357/rtems_misc
	* src/termios.c (rtems_termios_open):  Fixed code the incorrectly
	checked that the wrong pointer during allocation was NULL.

2003-02-18	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* src/privateenv.c: Fix prototype for free_user_env.

2003-02-11	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: AM_INIT_AUTOMAKE([1.7.2]).

2003-02-11	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: AC_PREREQ(2.57).

2003-02-06	Joel Sherrill <joel@OARcorp.com>

	* include/sys/ioccom.h: Include <sys/types.h> not <machine/types.h> so
	Linux port builds.

2003-02-05     Till Straumann  <strauman@slac.stanford.edu>

	PR 340/filesystem
	* src/fcntl.c: Add missing _fcntl_r assumed to exist by newlib.

2003-02-05	Joel Sherrill <joel@OARcorp.com>

	* include/sys/ioccom.h: Fix so not using internal RTEMS types in libc
	code.

2003-02-03	Joel Sherrill <joel@OARcorp.com>

	PR 338/filesystem
	* src/unixlibc.c: Side-effect of fixing reentrancy problem with 
	rtems_io_lookup_name() (API change).

2003-02-03     Till Straumann  <strauman@slac.stanford.edu>

	PR 339/filesystem
	* src/chroot.c: Fix violation of FS node object copy semantics.

2003-01-10	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Eliminate OBJS.

2003-01-10	Joel Sherrill <joel@OARcorp.com>

	* include/rtems/libio.h: Rename __dev_t to __rtems_dev_t to avoid